--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+patsy==1.0.1
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
@@ -31,8 +32,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
+scipy==1.15.1
 six==1.17.0
 stack-data==0.6.3
+statsmodels==0.14.4
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
