--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asttokens==3.0.0
+beautifulsoup4==4.12.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
@@ -7,20 +10,26 @@ debugpy==1.8.12
 decorator==5.1.1
 executing==2.2.0
 fonttools==4.55.6
+frozendict==2.4.6
+html5lib==1.1
+idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+lxml==5.3.0
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
+multitasking==0.0.11
 nest-asyncio==1.6.0
 numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 patsy==1.0.1
+peewee==3.17.8
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
@@ -32,12 +41,17 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
+requests==2.32.3
 scipy==1.15.1
 six==1.17.0
+soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 wcwidth==0.2.13
+webencodings==0.5.1
+yfinance==0.2.52
